--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,8 @@
 {
     "name": "diego-ninja/cosmic",
     "description": "Cosmic CLI microframework compatible with Symfony Console",
-    "type": "library",
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Ninja\\Cosmic\\": "src/"
-        },
-        "files": [
-            "helper/functions.php",
-            "helper/constants.php"
-        ]
-    },
+    "type": "library",
     "authors": [
         {
             "name": "Diego Rin Martin",
@@ -20,13 +11,15 @@
     ],
     "require": {
         "php": "^8.2",
+        "ext-mbstring": "*",
+        "ext-pcntl": "*",
         "ext-posix": "*",
-        "adbario/php-dot-notation": "^3.3",
-        "jolicode/jolinotif": "dev-main",
+        "jolicode/jolinotif": "^2",
         "nunomaduro/collision": "^7",
         "nunomaduro/termwind": "^1.15",
-        "php-di/invoker": "~2.0",
+        "php-di/invoker": "^2.0",
         "php-di/php-di": "^7",
+        "phpoption/phpoption": "^1.9",
         "psr/container": "^2.0",
         "ramsey/uuid": "^4.7",
         "symfony/console": "^6",
@@ -48,7 +41,17 @@
         "ramsey/conventional-commits": "^1.3",
         "roave/security-advisories": "dev-latest",
         "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^5"
+        "vimeo/psalm": "^5",
+        "phpstan/phpstan": "^1.10"
+    },
+    "autoload": {
+        "psr-4": {
+            "Ninja\\Cosmic\\": "src/"
+        },
+        "files": [
+            "helper/functions.php",
+            "helper/constants.php"
+        ]
     },
     "config": {
         "allow-plugins": {
@@ -106,5 +109,4 @@
         "dev:test:unit": "Runs unit tests.",
         "test": "Runs linting, static analysis, and unit tests."
     }
-
 }
