--- a/composer.json
+++ b/composer.json
@@ -31,18 +31,19 @@
         "captainhook/plugin-composer": "^5.3",
         "dealerdirect/phpcodesniffer-composer-installer": "^1",
         "ergebnis/composer-normalize": "^2.30",
+        "friendsofphp/php-cs-fixer": "^3.40",
         "icanhazstring/composer-unused": "^0.8.7",
         "maglnet/composer-require-checker": "^4.5",
         "moxio/captainhook-psalm": "^0.3.0",
         "php-parallel-lint/php-console-highlighter": "^1.0",
         "php-parallel-lint/php-parallel-lint": "^1.3",
+        "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10",
         "psalm/plugin-phpunit": "^0.18.4",
         "ramsey/conventional-commits": "^1.3",
         "roave/security-advisories": "dev-latest",
         "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^5",
-        "phpstan/phpstan": "^1.10"
+        "vimeo/psalm": "^5"
     },
     "autoload": {
         "psr-4": {
@@ -77,8 +78,8 @@
             "@dev:lint:syntax",
             "@dev:lint:style"
         ],
-        "dev:lint:fix": "phpcbf",
-        "dev:lint:style": "phpcs --colors --encoding=utf-8 -n",
+        "dev:lint:fix": "php-cs-fixer fix --config .php-cs-fixer.php src/ tests/ helper/",
+        "dev:lint:style": "php-cs-fixer check --config .php-cs-fixer.php src/ tests/ helper/",
         "dev:lint:syntax": "parallel-lint --colors src/ tests/",
         "dev:test": [
             "@dev:lint",
