feat(commands): adds build command to generate binary using box

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,9 @@
             "helper/constants.php"
         ]
     },
+    "bin": [
+        "cosmic"
+    ],
     "config": {
         "allow-plugins": {
             "captainhook/plugin-composer": true,
