--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-mbstring": "*",
         "ext-pcntl": "*",
         "ext-posix": "*",
+        "jc21/clitable": "^1.3",
         "jolicode/jolinotif": "^2",
         "nunomaduro/collision": "^7",
         "nunomaduro/termwind": "^1.15",
@@ -30,21 +31,16 @@
     "require-dev": {
         "captainhook/captainhook": "^5.10",
         "captainhook/plugin-composer": "^5.3",
-        "dealerdirect/phpcodesniffer-composer-installer": "^1",
         "ergebnis/composer-normalize": "^2.30",
         "friendsofphp/php-cs-fixer": "^3.40",
         "icanhazstring/composer-unused": "^0.8.7",
         "maglnet/composer-require-checker": "^4.5",
-        "moxio/captainhook-psalm": "^0.3.0",
         "php-parallel-lint/php-console-highlighter": "^1.0",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10",
-        "psalm/plugin-phpunit": "^0.18.4",
         "ramsey/conventional-commits": "^1.3",
-        "roave/security-advisories": "dev-latest",
-        "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^5"
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
@@ -60,6 +56,7 @@
     ],
     "config": {
         "allow-plugins": {
+            "bamarni/composer-bin-plugin": false,
             "captainhook/plugin-composer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "ergebnis/composer-normalize": true
@@ -68,9 +65,9 @@
     "scripts": {
         "deps": "@dev:deps",
         "dev:analyze": [
-            "@dev:analyze:psalm"
+            "@dev:analyze:phpstan"
         ],
-        "dev:analyze:psalm": "psalm --no-cache",
+        "dev:analyze:phpstan": "phpstan",
         "dev:build:clean": "git clean -fX builds/",
         "dev:deps": [
             "@dev:deps:missing",
@@ -99,7 +96,7 @@
     "scripts-descriptions": {
         "deps": "Checks for missing and unused dependencies.",
         "dev:analyze": "Runs all static analysis checks.",
-        "dev:analyze:psalm": "Runs the Psalm static analyzer.",
+        "dev:analyze:phpstan": "Runs the phpstan static analyzer.",
         "dev:build:clean": "Cleans the build/ directory.",
         "dev:deps": "Checks for missing and unused dependencies.",
         "dev:deps:missing": "Checks for missing dependencies.",
