feat(table): adds Table component based on jc21/clitable

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,11 @@
             "helper/constants.php"
         ]
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Ninja\\Cosmic\\Tests\\": "tests/"
+        }
+    },
     "bin": [
         "cosmic"
     ],
