--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,12 @@
         "jolicode/jolinotif": "^2",
         "nunomaduro/collision": "^7",
         "nunomaduro/termwind": "^1.15",
+        "phlak/config": "^8.0",
         "php-di/invoker": "^2.0",
         "php-di/php-di": "^7",
         "phpoption/phpoption": "^1.9",
         "psr/container": "^2.0",
+        "ramsey/collection": "^2.0",
         "ramsey/uuid": "^4.7",
         "symfony/console": "^6",
         "symfony/process": "^6",
