chore(checks): updated whitelist for composer-require-checker

--- a/crc.config.json
+++ b/crc.config.json
@@ -2,15 +2,8 @@
   "symbol-whitelist" : [
     "null", "true", "false",
     "static", "self", "parent",
-    "array", "string", "int", "float", "bool", "iterable", "callable", "void", "object", "mixed", "never", "app", "env","go", "SWOOLE_HOOK_ALL", "GLOB_BRACE",
+    "array", "string", "int", "float", "bool", "iterable", "callable", "void", "object", "mixed", "never", "app", "env","go",
     "find_binary", "is_root", "get_namespace_from_file",
-    "Swoole\\Coroutine",
-    "Swoole\\Runtime",
-    "Swoole\\Coroutine\\run",
-    "Swoole\\Coroutine\\WaitGroup",
-    "Swoole\\Database\\PDOConfig",
-    "Swoole\\Database\\PDOPool",
-    "Swoole\\Database\\PDOProxy",
     "value",
     "PhpOption\\Option",
     "Psr\\Container\\ContainerInterface"
