chore(style): phpcsfixer fixes

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_NAME=cosmic
 APP_DESCRIPTION=
 APP_ENV=local
+APP_KEY=
 APP_THEME=default
 APP_URL=https://cosmic.diego.ninja
 APP_AUTHOR="🥷 Diego Rin Martín"
@@ -8,4 +9,3 @@ APP_AUTHOR_EMAIL=yosoy@diego.ninja
 APP_DEBUG=false
 APP_LICENSE=MIT
 SUDO_PASSWORD=
-PHAR_ENABLED=true
