--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": "^8.2",
         "ext-json": "*",
         "ext-mbstring": "*",
+        "ext-openssl": "*",
         "ext-pcntl": "*",
         "ext-posix": "*",
         "ext-zip": "*",
