feat(env): adds EnviromentBuilder class to fix not env initialized apps

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=cosmic
-APP_DESCRIPTION=
+APP_DESCRIPTION="The ultimate php framework for building CLI applications"
 APP_ENV=local
 APP_KEY=
 APP_THEME=default
