chore(docs): rEADME.md updated

--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,13 @@
     ],
     "require": {
         "php": "^8.2",
-        "ext-json": "*",
         "ext-hash": "*",
+        "ext-json": "*",
         "ext-mbstring": "*",
         "ext-openssl": "*",
         "ext-pcntl": "*",
         "ext-posix": "*",
+        "ext-random": "*",
         "ext-zip": "*",
         "jolicode/jolinotif": "^2",
         "nunomaduro/collision": "^7",
