feat(commands): adds new commands to sign and publish the application to PHAR.IO via guthub release

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ APP_AUTHOR="🥷 Diego Rin Martín"
 APP_AUTHOR_EMAIL=yosoy@diego.ninja
 APP_DEBUG=false
 APP_LICENSE=MIT
+APP_SIGNING_KEY=
 SUDO_PASSWORD=
