--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "ramsey/uuid": "^4.7",
         "symfony/console": "^6",
         "symfony/process": "^6",
-        "vlucas/phpdotenv": "^5"
+        "vlucas/phpdotenv": "^5",
+        "seld/cli-prompt": "^1.0"
     },
     "require-dev": {
         "captainhook/captainhook": "^5.10",
