feat(ui): adds new UI element Progress to render progress bars

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "symfony/process": "^6",
         "vlucas/phpdotenv": "^5",
         "seld/cli-prompt": "^1.0",
-        "dariuszp/cli-progress-bar": "^1.0"
+        "dariuszp/cli-progress-bar": "^1.0",
+        "khill/php-duration": "^1.1"
     },
     "require-dev": {
         "captainhook/captainhook": "^5.10",
