feat(themes): standarize bundled themes: default, nord and dracula

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=cosmic
 APP_DESCRIPTION="The ultimate php framework for building CLI applications"
 APP_ENV=local
 APP_KEY=
-APP_THEME=default
+APP_THEME=nord
 APP_URL=https://cosmic.diego.ninja
 APP_AUTHOR="🥷 Diego Rin Martín"
 APP_AUTHOR_EMAIL=yosoy@diego.ninja
