--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
         "jolicode/jolinotif": "^2",
         "khill/php-duration": "^1.1",
         "nesbot/carbon": "^2.72",
-        "nunomaduro/collision": "^7|^8",
-        "nunomaduro/termwind": "^1|^2",
+        "nunomaduro/collision": "^7 || ^8",
+        "nunomaduro/termwind": "^1 || ^2",
         "phlak/config": "^8.0",
         "php-di/invoker": "^2.0",
         "php-di/php-di": "^7",
@@ -45,8 +45,8 @@
         "psr/container": "^2.0",
         "ramsey/collection": "^2.0",
         "ramsey/uuid": "^4.7",
-        "symfony/console": "^6|^7",
-        "symfony/process": "^6|^7",
+        "symfony/console": "^6 || ^7",
+        "symfony/process": "^6 || ^7",
         "vlucas/phpdotenv": "^5"
     },
     "require-dev": {
