--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=cosmic
-APP_DESCRIPTION="The ultimate php framework for building CLI applications"
+APP_DESCRIPTION="The php framework for building CLI applications"
 APP_ENV=local
 APP_KEY=
 APP_THEME=cosmic
@@ -11,3 +11,5 @@ APP_LICENSE=MIT
 APP_SIGNING_KEY=
 SUDO_PASSWORD=
 DISABLE_COSMIC_COMMANDS=false
+GITHUB_TOKEN=
+GITHUB_PUBLISH_METHOD=api
