chore(deps): composer files updated

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "innmind/signals": "^3.1",
         "jolicode/jolinotif": "^2",
         "khill/php-duration": "^1.1",
+        "knplabs/github-api": "^3.0",
         "nesbot/carbon": "^2.72",
         "nunomaduro/collision": "^7 || ^8",
         "nunomaduro/termwind": "^1 || ^2",
@@ -49,9 +50,8 @@
         "symfony/console": "^6 || ^7",
         "symfony/process": "^6 || ^7",
         "vlucas/phpdotenv": "^5",
-        "knplabs/github-api": "^3.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "http-interop/http-factory-guzzle": "^1.0"
+        "symfony/http-client": "^7.0",
+        "nyholm/psr7": "^1.8"
     },
     "require-dev": {
         "captainhook/captainhook": "^5.10",
