--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "nesbot/carbon": "^2.72",
         "nunomaduro/collision": "^7 || ^8",
         "nunomaduro/termwind": "^1 || ^2",
+        "nyholm/psr7": "^1.8",
         "phlak/config": "^8.0",
         "php-di/invoker": "^2.0",
         "php-di/php-di": "^7",
@@ -48,10 +49,9 @@
         "ramsey/collection": "^2.0",
         "ramsey/uuid": "^4.7",
         "symfony/console": "^6 || ^7",
-        "symfony/process": "^6 || ^7",
-        "vlucas/phpdotenv": "^5",
         "symfony/http-client": "^7.0",
-        "nyholm/psr7": "^1.8"
+        "symfony/process": "^6 || ^7",
+        "vlucas/phpdotenv": "^5"
     },
     "require-dev": {
         "captainhook/captainhook": "^5.10",
