style(phpcsfixer): php-cs-fixer crying

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,13 @@ APP_DESCRIPTION="The php framework for building CLI applications"
 APP_ENV=local
 APP_KEY=
 APP_THEME=cosmic
-APP_URL=https://cosmic.diego.ninja
-APP_AUTHOR="🥷 Diego Rin Martín"
-APP_AUTHOR_EMAIL=yosoy@diego.ninja
+APP_URL=
+APP_AUTHOR=
+APP_AUTHOR_EMAIL=
 APP_DEBUG=false
 APP_LICENSE=MIT
 APP_SIGNING_KEY=
 SUDO_PASSWORD=
 DISABLE_COSMIC_COMMANDS=false
 GITHUB_TOKEN=
-GITHUB_PUBLISH_METHOD=api
+GITHUB_PUBLISH_METHOD=cli
